Corrected the file paths for data/labels/train/* and data/images/train/*

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ data/images/train/*
 data/labels/train/*
 data/images/ignore/*
 data/labels/ignore/*
+#all pre-trained models (with the exception of my own once I finish training it)
 *.pt
